<resources>
    <string name="app_name">ProfileApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Enter Details</string>
    <string name="second_fragment_label">Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="select_date">Select DOB</string>
    <string name="dob_text">DOB %1$s</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_second_name">Second Name</string>
    <string name="first_name_text">First name: “%1$s”</string>
    <string name="second_name_text">Last name: “%1$s”</string>
    <string name="age_text">Age: %1$s years , %2$s month, %3$s days.</string>
</resources>