<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/action_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="@dimen/elevation_action_card"
    app:cardUseCompatPadding="true"
    app:contentPaddingLeft="@dimen/padding_action_card"
    app:contentPaddingRight="@dimen/padding_action_card">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FirstFragment">
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="20"
            android:padding="@dimen/padding_20dp"
            android:inputType="textCapWords"
            android:textSize="@dimen/text_16"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_second_name"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/first_name"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/second_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="20"
            android:textSize="@dimen/text_16"
            android:inputType="textCapWords"
            android:padding="@dimen/padding_20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/text_20"
        android:padding="@dimen/padding_20dp"
        android:enabled="true"
        app:icon="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintTop_toBottomOf="@id/second_name"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/calendarTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dob_text"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/text_24"
        android:padding="@dimen/padding_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/calendarButton"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/text_20"
        android:padding="@dimen/padding_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/calendarTextView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>