<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.SecondFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/elevation_action_card"
        app:cardUseCompatPadding="true"
        app:contentPaddingLeft="@dimen/padding_action_card"
        app:contentPaddingRight="@dimen/padding_action_card"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/footer_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/firstNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:gravity="center|center_vertical"
                android:minHeight="50dp"
                android:textSize="@dimen/text_24"
                android:text="@string/first_name_text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/lastNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/text_24"
                android:gravity="center|center_vertical"
                android:minHeight="50dp"
                android:text="@string/second_name_text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/dobText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/margin"
                android:gravity="center|center_vertical"
                android:minHeight="50dp"
                android:textSize="@dimen/text_24"
                android:text="@string/age_text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>